Tiny update of notebook

--- a/Deeping.ipynb
+++ b/Deeping.ipynb
@@ -2,11 +2,171 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Процент удаленных строк 11.50851581508516\n",
+      "+ BMI: \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>ap_hi</th>\n",
+       "      <th>ap_lo</th>\n",
+       "      <th>cholesterol</th>\n",
+       "      <th>gluc</th>\n",
+       "      <th>smoke</th>\n",
+       "      <th>alco</th>\n",
+       "      <th>active</th>\n",
+       "      <th>cardio</th>\n",
+       "      <th>type</th>\n",
+       "      <th>BMI</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>18393</td>\n",
+       "      <td>2</td>\n",
+       "      <td>168</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>110</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>train</td>\n",
+       "      <td>21.967120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20228</td>\n",
+       "      <td>1</td>\n",
+       "      <td>156</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>90</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>train</td>\n",
+       "      <td>34.927679</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>18857</td>\n",
+       "      <td>1</td>\n",
+       "      <td>165</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>70</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>train</td>\n",
+       "      <td>23.507805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>17623</td>\n",
+       "      <td>2</td>\n",
+       "      <td>169</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>train</td>\n",
+       "      <td>28.710479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>17474</td>\n",
+       "      <td>1</td>\n",
+       "      <td>156</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>train</td>\n",
+       "      <td>23.011177</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id    age  gender  height  weight  ap_hi  ap_lo  cholesterol  gluc  smoke  \\\n",
+       "0   0  18393       2     168    62.0    110     80            1     1      0   \n",
+       "1   1  20228       1     156    85.0    140     90            3     1      0   \n",
+       "2   2  18857       1     165    64.0    130     70            3     1      0   \n",
+       "3   3  17623       2     169    82.0    150    100            1     1      0   \n",
+       "4   4  17474       1     156    56.0    100     60            1     1      0   \n",
+       "\n",
+       "   alco  active  cardio   type        BMI  \n",
+       "0     0       1       0  train  21.967120  \n",
+       "1     0       1       1  train  34.927679  \n",
+       "2     0       0       1  train  23.507805  \n",
+       "3     0       1       1  train  28.710479  \n",
+       "4     0       0       0  train  23.011177  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('Info.csv', sep = \";\")\n",
@@ -16,8 +176,6 @@
     "to_del2 = df[(df['height'].quantile(0.975)<df['height'])]['id']\n",
     "to_del3 = df[(df['weight'].quantile(0.025)>df['weight'])]['id']\n",
     "to_del4 = df[(df['weight'].quantile(0.975)<df['weight'])]['id']\n",
-    "\n",
-    "\n",
     "DELETE = (to_del, to_del2, to_del1, to_del3, to_del4)\n",
     "for ever in DELETE:\n",
     "    for i in ever:\n",
@@ -28,7 +186,80 @@
     "print(\"Процент удаленных строк \"+str(((d/f)*100)))\n",
     "df[\"BMI\"] = df['weight']/((df['height']/100)**2)\n",
     "print(\"+ BMI: \")\n",
-    "print(df)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Мужчин 35082\n",
+      "Женщин 64918\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>gender</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>smoke</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>63750</td>\n",
+       "      <td>27423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1168</td>\n",
+       "      <td>7659</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "gender      1      2\n",
+       "smoke               \n",
+       "0       63750  27423\n",
+       "1        1168   7659"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "string = df[\"gender\"].value_counts()\n",
     "answ = []\n",
     "for ever in string:\n",
@@ -38,6 +269,25 @@
     "print(\"Мужчин \"+str(male))\n",
     "print(\"Женщин \"+str(female))\n",
     "smoking = pd.crosstab(df[\"smoke\"], df[\"gender\"])\n",
+    "smoking.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Процент курящих мужчин к проценту курящих женщин 12\n",
+      "Разница в возрасте[мес] курящих и не курящих 13\n",
+      "Отношение количества больных курящих мужчин к здоровым курящим мужчинам 3.0\n"
+     ]
+    }
+   ],
+   "source": [
     "psf=(smoking[1][1])/female\n",
     "psm=(smoking[2][1])/male\n",
     "freq = int(round(psm/psf))#Процент курящих мужчин: процент курящих женщин\n",
@@ -67,34 +317,25 @@
    "source": [
     ""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    ""
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2.0
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
